docs: add mcp section